@@ -9,10 +9,10 @@ vdc:vin in gnd vdc=1
 
 x1 in out 1 gnd inverter
 
-.subckt inverter in out 1 gnd
+.subckt inverter in out 1 2
 mosbsim3:m1 out in 1 1 type = p m=3
-#res:r1 out gnd r=100k
-mosbsim3:m2 out in gnd gnd type = n
+#res:r1 out 2 r=100k
+mosbsim3:m2 out in 2 2 type = n
 .ends
 
 .plot dc out
